<resources>
    <string name="app_name">Promoção Verdadeira</string>
    <string name="login">Entrar</string>
    <string name="signup">Cadastrar-se</string>
    <string name="main_slogan">Sua promoção é verdadeira?</string>
    <string name="price">Preço</string>
    <string name="period_promotion">Período da Promoção</string>
    <string name="start_promotion">Início</string>
    <string name="finish_promotion">Fim</string>
    <string name="new_promotion">Adicionar Promoção</string>
    <string name="save">Salvar</string>


    <!-- Product -->
    <string name="product_name">Nome</string>
    <string name="product_description">Descrição</string>
    <string name="product_measure">Medida</string>
    <string name="product_type">Tipo do Produto</string>


    <!-- Tab Title-->
    <string-array name="tab_titles">
        <item>Promoções</item>
        <item>Nova Promoção</item>
        <item>Novo Produto</item>
    </string-array>

</resources>
